@@ -1,5 +1,6 @@
 === ongoing (0.2.X - to be released as 0.3) ===
 
+- Improved and enhanced transaction form
 - Added account statistics
 - Added CU views for transactions and invoices
 - Improved balance to handle multi-currency objects
